--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   "devDependencies": {
     "concurrently": "^5.1.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "apollo-server-express": "^2.25.2",
+    "graphql": "^15.5.1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lacey-griffith/book-search.git"
