--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "dependencies": {
     "apollo-server-express": "^2.25.2",
-    "graphql": "^15.5.1"
+    "graphql": "^15.5.1",
+    "jwt-decode": "^3.1.2"
   },
   "repository": {
     "type": "git",
